Working on Colour Picker

--- a/test.html
+++ b/test.html
@@ -8,7 +8,12 @@
 <body>
   <div class="container">
     <h1>Grid</h1>
-    <div id="grid"></div>
+    <div id="color-grid">
+      <!-- Color Grid will be added here by JavaScript -->
+    </div>
+    <div id="grid">
+      <!-- Main Grid will be added here by JavaScript -->
+    </div>
     <div id="buttons">
       <button id="clear">Clear</button>
       <button id="convert">Convert</button>
