--- a/test.html
+++ b/test.html
@@ -8,11 +8,13 @@
 <body>
   <div class="container">
     <h1>Grid</h1>
-    <div id="color-grid">
-      <!-- Color Grid will be added here by JavaScript -->
-    </div>
-    <div id="grid">
-      <!-- Main Grid will be added here by JavaScript -->
+    <div class="grid-container">
+      <div id="color-grid">
+        <!-- Color Grid will be added here by JavaScript -->
+      </div>
+      <div id="grid">
+        <!-- Main Grid will be added here by JavaScript -->
+      </div>
     </div>
     <div id="buttons">
       <button id="clear">Clear</button>
