Added Output to the right hand side

--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Grid</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   <div class="container">
@@ -15,6 +15,9 @@
       <div id="grid">
         <!-- Main Grid will be added here by JavaScript -->
       </div>
+      <div id="output">
+        <!-- Sample Code Output -->
+      </div>
     </div>
     <div id="buttons">
       <button id="clear">Clear</button>
@@ -24,6 +27,8 @@
 
   <input type="color" id="color-picker" value="#000000" hidden>
   
-  <script src="script.js"></script>
+  <script src="scripts/colors.js" type="module"></script>
+  <script src="scripts/grid.js" type="module"></script>
+  <script src="scripts/main.js" type="module"></script>
 </body>
 </html>
