Moved Output box to bottom of screen

--- a/test.html
+++ b/test.html
@@ -15,9 +15,14 @@
       <div id="grid">
         <!-- Main Grid will be added here by JavaScript -->
       </div>
-      <div id="output">
-        <!-- Sample Code Output -->
+      <div id="toolbox">
+        <!-- The Toolbox -->
       </div>
+    </div>
+    <div id="output-container">
+        <div id="output">
+            <!-- Sample Code Output -->
+        </div>
     </div>
     <div id="buttons">
       <button id="clear">Clear</button>
