--- a/test.html
+++ b/test.html
@@ -20,13 +20,14 @@
       </div>
     </div>
     <div id="output-container">
-        <div id="output">
-            <!-- Sample Code Output -->
-        </div>
+        <textarea type="text" contenteditable="true" id="output">
+           
+        </textarea>
     </div>
     <div id="buttons">
       <button id="clear">Clear</button>
-      <button id="convert">Convert</button>
+      <button id="convert">Generate</button>
+      <button id="import">Import</button>
     </div>
   </div>
 
