--- a/test.html
+++ b/test.html
@@ -26,6 +26,7 @@
     </div>
     <div id="buttons">
       <button id="clear">Clear</button>
+      <button id="fill">Fill</button>
       <button id="convert">Generate</button>
       <button id="import">Import</button>
     </div>
