Added multiple grids + forward and back

--- a/test.html
+++ b/test.html
@@ -25,10 +25,12 @@
         </textarea>
     </div>
     <div id="buttons">
-      <button id="clear">Clear</button>
-      <button id="fill">Fill</button>
-      <button id="convert">Generate</button>
-      <button id="import">Import</button>
+        <button id="prevButton">&lt;</button>
+        <button id="clear">Clear</button>
+        <button id="fill">Fill</button>
+        <button id="convert">Generate</button>
+        <button id="import">Import</button>
+        <button id="nextButton">&gt;</button>
     </div>
   </div>
 
