--- a/test.html
+++ b/test.html
@@ -24,13 +24,17 @@
            
         </textarea>
     </div>
-    <div id="buttons">
+    <div id="navButtons">
         <button id="prevButton">&lt;</button>
+        <div id="currentGrid">0</div>
+        <button id="nextButton">&gt;</button>
+    </div>
+    <div id="buttons">
         <button id="clear">Clear</button>
+        <button id="clearToColour">Clear to Colour</button>
         <button id="fill">Fill</button>
         <button id="convert">Generate</button>
         <button id="import">Import</button>
-        <button id="nextButton">&gt;</button>
     </div>
   </div>
 
