Renamed Nav Buttons etc

--- a/index.html
+++ b/index.html
@@ -39,19 +39,21 @@
       </div>
       <div id="toolbox">
         <div id="navButtons">
-            <button id="prevButton">&lt;</button>
+            <button id="prevButton" class="grid-nav-button">&lt;</button>
             <div id="currentGrid">0</div>
-            <button id="nextButton">&gt;</button>
+            <button id="nextButton" class="grid-nav-button">&gt;</button>
         </div>
         <div id="buttons">
-            <button id="clear">Clear</button>
-            <button id="clearToColour">Clear to Colour</button>
-            <button id="fill">Fill</button>
-            <button id="convert">Generate</button>
-            <button id="import">Import</button>
+            <button id="clear" class="full-width-button">Clear</button>
+            <button id="clearToColour" class="full-width-button">Clear to Colour</button>
+            <button id="fill" class="full-width-button">Fill</button>
+            <button id="convert" class="full-width-button">Generate Sprite Data</button>
+            <button id="import" class="full-width-button">Import Sprite Data</button>
         </div>    
       </div>
     </div>
+    <h2>Sprite Data</h2>
+      
     <div id="output-container">
         <textarea type="text" contenteditable="true" id="output">
            
