Adding Pixel Shift Buttons

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Grid</title>
+  <title>SAM Coupe Sprite Editor</title>
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
@@ -49,7 +49,13 @@
             <button id="fill" class="full-width-button">Fill</button>
             <button id="convert" class="full-width-button">Generate Sprite Data</button>
             <button id="import" class="full-width-button">Import Sprite Data</button>
-        </div>    
+        </div>
+        <div id="pixelShift">
+            <button id="moveUp" class="full-width-button">Up</button>
+            <button id="moveLeft" class="half-width-button">Left</button>
+            <button id="moveRight" class="half-width-button">Right</button>
+            <button id="moveDown" class="full-width-button">Down</button>            
+        </div>
       </div>
     </div>
     <h2>Sprite Data</h2>
