Remove Space in Output Text Area

--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
     <h2>Sprite Data</h2>
       
     <div id="output-container">
-        <textarea type="text" contenteditable="true" id="output">
-           
-        </textarea>
+        <textarea type="text" contenteditable="true" id="output"></textarea>
     </div>
   </div>
 
