Add headings to Toolbox area

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
   <div id="main-container" class="container">
     <div class="grid-container">
+      
       <div id="color-grid">
         <!-- Color Grid will be added here by JavaScript -->
       </div>
@@ -38,11 +39,14 @@
         <!-- Main Grid will be added here by JavaScript -->
       </div>
       <div id="toolbox">
+
+        <h5 class="center-header">Select Sprite</h3>
         <div id="navButtons">
             <button id="prevButton" class="grid-nav-button">&lt;</button>
             <div id="currentGrid">0</div>
             <button id="nextButton" class="grid-nav-button">&gt;</button>
         </div>
+        <h5 class="center-header">Controls</h3>
         <div id="buttons">
             <button id="clear" class="full-width-button">Clear</button>
             <button id="clearToColour" class="full-width-button">Clear to Colour</button>
@@ -50,6 +54,7 @@
             <button id="convert" class="full-width-button">Generate Sprite Data</button>
             <button id="import" class="full-width-button">Import Sprite Data</button>
         </div>
+        <h5 class="center-header">Move Sprite</h3>
         <div id="pixelShift">
             <button id="moveUp" class="full-width-button">Up</button>
             <button id="moveLeft" class="half-width-button">Left</button>
