Added Cut Column and Cut Row and moved buttons around

--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
         </div>
         <h5 class="center-header">Controls</h3>
         <div id="buttons">
-            <button id="clear" class="full-width-button">Clear</button>
-            <button id="clearToColour" class="full-width-button">Clear to Colour</button>
+            <button id="clear" class="half-width-button">Clear Sprite Canvas</button>
+            <button id="clearToColour" class="half-width-button">Clear to Colour</button>
             <button id="fill" class="full-width-button">Fill</button>
-            <button id="convert" class="full-width-button">Generate Sprite Data</button>
-            <button id="import" class="full-width-button">Import Sprite Data</button>
+            <button id="cutColumn" class="half-width-button">Cut Column</button>
+            <button id="cutRow" class="half-width-button">Cut Row</button>
+            <button id="convert" class="half-width-button">Generate Sprite Data</button>
+            <button id="import" class="half-width-button">Import Sprite Data</button>
         </div>
         <h5 class="center-header">Move Sprite</h3>
         <div id="pixelShift">
@@ -66,7 +68,38 @@
     <h2>Sprite Data</h2>
       
     <div id="output-container">
-        <textarea type="text" contenteditable="true" id="output"></textarea>
+        <textarea type="text" contenteditable="true" id="output">Sprite1_1:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_2:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_3:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_4:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_5:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_6:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_7:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x0F, 0xFF, 0xFF, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_8:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xFF, 0xFF, 0xFF, 0xF0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_9:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x0F, 0xF0, 0x0F, 0x00, 0xFF, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_10:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x0F, 0x0F, 0xF0, 0xFF, 0x0F, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_11:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xF0, 0xFF, 0xF0, 0xFF, 0xF0, 0xF0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_12:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xF0, 0xF0, 0x00, 0x00, 0xF0, 0xF0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_13:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xF0, 0xF0, 0x00, 0x00, 0xF0, 0xF0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_14:   DEFB      0xFF, 0xFF, 0xF0, 0x00, 0x0F, 0xFF, 0x00, 0xFF, 0xF0, 0x0F, 0xFF, 0x00, 0x00, 0xFF, 0xFF, 0xFF
+Sprite1_15:   DEFB      0xFF, 0xFF, 0x0A, 0xAA, 0x0F, 0xFF, 0xFF, 0x00, 0x0F, 0xFF, 0xFF, 0x0A, 0xAA, 0x0F, 0xFF, 0xFF
+Sprite1_16:   DEFB      0xFF, 0xFF, 0x0A, 0xAA, 0x0F, 0xF0, 0xFF, 0xFF, 0xFF, 0xF0, 0xFF, 0x0A, 0xAA, 0x0F, 0xFF, 0xFF
+Sprite1_17:   DEFB      0xFF, 0xFF, 0x0A, 0xAA, 0x0F, 0xFF, 0x00, 0x00, 0x00, 0x0F, 0xFF, 0x0A, 0xAA, 0x0F, 0xFF, 0xFF
+Sprite1_18:   DEFB      0xFF, 0xFF, 0x0A, 0xAA, 0x0F, 0xFF, 0xF0, 0x00, 0x00, 0xFF, 0xFF, 0x0A, 0xAA, 0x0F, 0xFF, 0xFF
+Sprite1_19:   DEFB      0xFF, 0xFF, 0xF0, 0x00, 0xF0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xF0, 0x00, 0xFF, 0xFF, 0xFF
+Sprite1_20:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_21:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x0F, 0xFF, 0xFF, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_22:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_23:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x0A, 0xAA, 0xAF, 0xAA, 0xAA, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_24:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xAA, 0xAF, 0xA0, 0xAF, 0xAA, 0xA0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_25:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xAA, 0xAA, 0xA0, 0xAA, 0xAA, 0xA0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_26:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xAA, 0xAA, 0xA0, 0xAA, 0xAA, 0xA0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_27:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0x0F, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_28:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_29:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_30:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_31:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
+Sprite1_32:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF</textarea>
     </div>
   </div>
 
