Added Info on BLogs, footer and correct links from navbar

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>SAM Coupe Sprite Editor</title>
+  <title>SAM Coupè Sprite Editor</title>
   <link rel="stylesheet" href="styles/style.css?v=1.0.1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
@@ -13,15 +13,15 @@
   <div class="container">
       <div class="row">
               <div class="col">
-                  <a class="navbar-brand" href="#">
+                  <a class="navbar-brand" href="https://www.petecodes.co.uk">
                       <img src="images/SAMCoupe.png" alt="">
                   </a>
               </div>
               <div id="main-title" class="col-5 text-center">
-                  <h2>SAM Coupe Sprite Designer</h2>      
+                  <h2>SAM Coupè Sprite Designer</h2>      
               </div>
               <div class="col text-right">
-                  <a class="right-logo " href="#">
+                  <a class="right-logo " href="https://www.petecodes.co.uk">
                       <img src="images/Sam_the_robot-2.png" alt="">
                   </a>
               </div>
@@ -104,6 +104,37 @@ Sprite1_32:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x
   </div>
 
   <input type="color" id="color-picker" value="#000000" hidden>
+
+  <div class="container my-5">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+      <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+        <h1 class="display-4 fw-bold lh-1">SAM Coupè Blogs</h1>
+        <p class="lead">You can find a few tutorials on Assembly Language and Graphics Programming for the SAM Coupè here;</p>
+        <a href="https://www.petecodes.co.uk/sam-coupe-assembly-language-programming/">SAM Coupè Assembly Language Programming</a>
+      <br>
+      <br>
+      <a href="https://www.petecodes.co.uk/graphics-in-assembler-for-the-sam-coupe/">Graphics in Assembler for the SAM Coupè</a>
+      </div>
+      <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+          <img class="rounded-lg-3 small-hero-image" src="images/Sam_the_robot.png" alt="" width="720">
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <p class="col-md-4 mb-0 text-muted">© 2023 Pete Gallagher</p>
+  
+      <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+      </a>
+  
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item"><a href="https://www.petecodes.co.uk" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="https://www.petecodes.co.uk/blog" class="nav-link px-2 text-muted">Blog</a></li>
+      </ul>
+    </footer>
+  </div>
   
   <script src="scripts/colors.js" type="module"></script>
   <script src="scripts/grid.js" type="module"></script>
