Fix Tilde for Dan

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>SAM Coupè Sprite Editor</title>
+  <title>SAM Coupé Sprite Editor</title>
   <link rel="stylesheet" href="styles/style.css?v=1.0.1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
@@ -18,7 +18,7 @@
                   </a>
               </div>
               <div id="main-title" class="col-5 text-center">
-                  <h2>SAM Coupè Sprite Designer</h2>      
+                  <h2>SAM Coupé Sprite Designer</h2>      
               </div>
               <div class="col text-right">
                   <a class="right-logo " href="https://www.petecodes.co.uk">
@@ -108,9 +108,9 @@ Sprite1_32:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x
   <div class="container my-5">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-        <h1 class="display-4 fw-bold lh-1">SAM Coupè Blogs</h1>
-        <p class="lead">You can find a few tutorials on Assembly Language and Graphics Programming for the SAM Coupè here;</p>
-        <a href="https://www.petecodes.co.uk/sam-coupe-assembly-language-programming/">SAM Coupè Assembly Language Programming</a>
+        <h1 class="display-4 fw-bold lh-1">SAM Coupé Blogs</h1>
+        <p class="lead">You can find a few tutorials on Assembly Language and Graphics Programming for the SAM Coupé here;</p>
+        <a href="https://www.petecodes.co.uk/sam-coupe-assembly-language-programming/">SAM Coupé Assembly Language Programming</a>
       <br>
       <br>
       <a href="https://www.petecodes.co.uk/graphics-in-assembler-for-the-sam-coupe/">Graphics in Assembler for the SAM Coupè</a>
