--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <button id="cutRow" class="half-width-button">Cut Row</button>
             <button id="convert" class="half-width-button">Generate Sprite Data</button>
             <button id="import" class="half-width-button">Import Sprite Data</button>
+            <input class="full-width-button" type="file" id="importPNG">
         </div>
         <h5 class="center-header">Move Sprite</h3>
         <div id="pixelShift">
